More Updates to Sites

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/arrow.css">
-    <!-- <link rel="stylesheet" href="css/arrow.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
+    <!-- HEADER 1 -->
     <header id="header1">
+        <!-- LOGO 1 -->
       	<div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
 
+          <!-- NAVIGATION 1 -->
           <nav class="top-bar large-9 small-9 columns" data-topbar>
             <ul class="title-area">
               <li class="name"></li>
@@ -37,9 +39,12 @@
           </nav>
       </header>
 
+      <!-- HEADER 2 -->
       <header id="header2" class="headChange">
+        <!-- LOGO 2 -->
         <div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
 
+          <!-- NAVIGATION 2 -->
           <nav class="top-bar large-9 small-9 columns" data-topbar>
           	<ul class="title-area">
               <li class="name"></li>
@@ -75,21 +80,21 @@
                       <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Staff" alt="Cordova Elementary Staff">
                         <img src="img/clickIcon.png">
                         <div>
-                          <h1>Staff</h1>
+                          <h2>Staff</h2>
                           <h2>click here</h2>
                         </div>
                       </div>
                       <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Adopters" alt="Cordova Elementary Adopters">
                         <img src="img/clickIcon.png">
                         <div>
-                          <h1>Adopters</h1>
+                          <h2>Adopters</h2>
                           <h2>click here</h2>
                         </div>
                       </div>
                       <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Activities" alt="Cordova Elementary Activities">
                         <img src="img/clickIcon.png">
                         <div>
-                          <h1>Activities</h1>
+                          <h2>Activities</h2>
                           <h2>click here</h2>
                         </div>
                       </div>
@@ -102,11 +107,29 @@
           </div>
         </div>
 
-
       <div id="bckRotate"><img src="img/ce_HeroImg2.jpg"></div>
     </section>
+    <!-- END HOME -->
 
+
+    <!-- DOWN ARROW -->
     <div id="downArr" class="animated css3-notification"><a href=""><img src="img/downArr.png" border="0" title="Cordova Elementary News"></a></div>
+
+
+  <!-- MISSION STATEMENT -->
+    <section id="mission">
+      <h1>Our Mission</h1>
+      <div class="graphic">
+        <img src="img/graphic.png" border="0">
+      </div>
+      <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.</p>
+    </section>
+
+
+    <!-- NEWS -->
+    <section id="news">
+
+    </section>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
