--- a/index.html
+++ b/index.html
@@ -126,9 +126,153 @@
     </section>
 
 
-    <!-- NEWS -->
-    <section id="news">
+    <!-- NEWS/EVENTS-->
+    <section id="news-events">
+      <div class="row">
+        <div class="large-12 small-12 columns">
 
+          <!-- NEWS -->
+          <div id="article1" class="large-6 small-12 columns">
+            <div id="headContainer" class="large-6 large-centered small-12 columns">
+              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="News Icon"></div>
+              <h1 class="large-3 columns end">News</h1>
+              <div class="graphicEle large-12 columns">
+                <img src="img/graphic.png" border="0">
+              </div>
+            </div>
+            <div class="large-12 small-12 columns">
+              <div class="large-6 small-12 columns">
+                <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
+                <div class="newsArticle large-6 columns">
+                  <h3>Gold-Gain School</h3>
+                  <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                  <div class="readmore"><a href="#">Read more...</a></div>
+                </div>
+              </div>
+              <div class="large-6 small-12 columns">
+                <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
+                <div class="newsArticle large-6 columns">
+                  <h3>Robotics Team Wins</h3>
+                  <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                  <div class="readmore"><a href="#">Read more...</a></div>
+                </div>
+              </div>
+          </div>
+
+
+          <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
+              <div class="newsArticle large-6 columns">
+                <h3>Spelling Bee</h3>
+                <p>Congratulations to the spelling bee winners.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="newsImg large-6 columns"><img src="img/img2.jpg"></div>
+              <div class="newsArticle large-6 columns">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="newsImg large-6 columns"><img src="img/img1.jpg"></div>
+              <div class="newsArticle large-6 columns">
+                <h3>Spelling Bee</h3>
+                <p>Congratulations to the spelling bee winners.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="newsImg large-6 columns"><img src="img/img3.jpg"></div>
+              <div class="newsArticle large-6 columns">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <!-- EVENTS -->
+        <div id="article2" class="large-6 small-12 columns">
+          <div id="headContainer2" class="large-6 large-centered small-12 columns">
+            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Events Icon"></div>
+            <h1 class="large-3 columns end">Events</h1>
+            <div class="graphicEle large-12 columns">
+              <img src="img/whiteGraphic.png" border="0">
+            </div>
+          </div>
+          <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>11</h3>
+              </div>
+              <div class="eventArticle">
+                <h3>Gold-Gain School</h3>
+                <p>CES was recognized as a Gold Gain EPIC (Effective Practice Incentive Community) School for the 2009-2010 year.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="eventDate"></div>
+              <div class="eventArticle">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="eventDate"></div>
+              <div class="eventArticle">
+                <h3>Spelling Bee</h3>
+                <p>Congratulations to the spelling bee winners.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="eventDate"></div>
+              <div class="eventArticle">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="eventDate"></div>
+              <div class="eventArticle">
+                <h3>Spelling Bee</h3>
+                <p>Congratulations to the spelling bee winners.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="eventDate"></div>
+              <div class="eventArticle">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script src="js/vendor/jquery.js"></script>
