Made More Changes to Website

--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
               </div>
             </div>
             <div class="large-6 small-12 columns">
-              <div class="eventDate"></div>
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>15</h3>
+              </div>
               <div class="eventArticle">
                 <h3>Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
@@ -235,7 +238,10 @@
 
           <div class="large-12 small-12 columns">
             <div class="large-6 small-12 columns">
-              <div class="eventDate"></div>
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>15</h3>
+              </div>
               <div class="eventArticle">
                 <h3>Spelling Bee</h3>
                 <p>Congratulations to the spelling bee winners.</p>
@@ -243,7 +249,10 @@
               </div>
             </div>
             <div class="large-6 small-12 columns">
-              <div class="eventDate"></div>
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>16</h3>
+              </div>
               <div class="eventArticle">
                 <h3>Robotics Team Wins</h3>
                 <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
@@ -253,24 +262,139 @@
           </div>
 
 
+          <!-- <div class="large-12 small-12 columns">
+            <div class="large-6 small-12 columns">
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>17</h3>
+              </div>
+              <div class="eventArticle">
+                <h3>Spelling Bee</h3>
+                <p>Congratulations to the spelling bee winners.</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+            <div class="large-6 small-12 columns">
+              <div class="eventDate">
+                <h3>Aug</h3>
+                <h3>20</h3>
+              </div>
+              <div class="eventArticle">
+                <h3>Robotics Team Wins</h3>
+                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
+                <div class="readmore"><a href="#">Read more...</a></div>
+              </div>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </section>
+    <!-- END NEWS/EVENTS-->
+
+
+
+    <!-- GLOBAL LEADERS -->
+    <section id="global">
+      <div class="large-12 columns">
+        <h1>Developing Global<br />Leaders and Learners</h1>
+        <div class="graphicEle">
+          <img src="img/whiteGraphic.png" border="0">
+        </div>
+        <div><img src="img/Hero2.jpg" alt="DEVELOPING GLOBAL LEADERS AND LEARNERS"></div>
+      </div>
+    </section>
+
+
+
+    <!-- SUPPLY LIST -->
+    <section id="supply">
+      <div class="large-12 columns">
+        <div class="large-12 columns">
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>Kindergarten/Pre-K Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>1st Grade Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>2nd Grade Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+        </div>
+        <div class="large-12 columns">
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>3rd Grade Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>4th Grade Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+          <div class="wrapper large-4 small-12 columns">
+            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
+            <div>
+              <h2>5th Grade Supply List</h2>
+              <h2>Click Here</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END SUPPLY LIST -->
+
+
+
+    <!-- QUICK LINKS/TWITTER -->
+    <section id="link-twit">
+      <div class="row">
+        <div class="large-12 small-12 columns">
+
+          <!-- NEWS -->
+          <div id="article1" class="large-6 small-12 columns">
+            <div id="headContainer" class="large-6 large-centered small-12 columns">
+              <div class="icons large-3 columns"><img src="img/linkIcon.png" alt="News Icon"></div>
+              <h1 class="large-3 columns end">Quick Links</h1>
+              <div class="graphicEle large-12 columns">
+                <img src="img/graphic.png" border="0">
+              </div>
+            </div>
+            <div class="large-12 small-12 columns">
+              <h2>TRANSCRIPTS</h2>
+              <h2>UNIFORM POLICY/DRESS CODE</h2>
+              <h2>LUNCH MENU</h2>
+              <h2>KHAN ACADEMY</h2>
+            </div>
+          </div>
+
+
+        <!-- EVENTS -->
+        <div id="article2" class="large-6 small-12 columns">
+          <div id="headContainer2" class="large-6 large-centered small-12 columns">
+            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Events Icon"></div>
+            <h1 class="large-3 columns end">Twitter</h1>
+            <div class="graphicEle large-12 columns">
+              <img src="img/whiteGraphic.png" border="0">
+            </div>
+          </div>
           <div class="large-12 small-12 columns">
-            <div class="large-6 small-12 columns">
-              <div class="eventDate"></div>
-              <div class="eventArticle">
-                <h3>Spelling Bee</h3>
-                <p>Congratulations to the spelling bee winners.</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-            <div class="large-6 small-12 columns">
-              <div class="eventDate"></div>
-              <div class="eventArticle">
-                <h3>Robotics Team Wins</h3>
-                <p>1st Place Mechanical Design West TN FIRST LEGO League Championship @ The University of Memphis</p>
-                <div class="readmore"><a href="#">Read more...</a></div>
-              </div>
-            </div>
-          </div>
+
         </div>
       </div>
     </section>
