Made updates to HTML and CSS

--- a/index.html
+++ b/index.html
@@ -310,50 +310,62 @@
     <section id="supply">
       <div class="large-12 columns">
         <div class="large-12 columns">
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>Kindergarten/Pre-K Supply List</h2>
-              <h2>Click Here</h2>
+          <a href="#" title="Kindergarten/Pre-K Supply List" alt="Kindergarten/Pre-K Supply List">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>Kindergarten/Pre-K Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
+            </div>
+          </a>
+          <a href="#" title="1st Grade Supply List" alt="1st Grade Supply List">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>1st Grade Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
+            </div>
+          </a>
+          <a href="#" title="2nd Grade Supply List" alt="2nd Grade Supply List">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>2nd Grade Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
             </div>
           </div>
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>1st Grade Supply List</h2>
-              <h2>Click Here</h2>
+        </a>
+        <a href="#" title="3rd Grade Supply List" alt="3rd Grade Supply List">
+          <div class="large-12 columns">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>3rd Grade Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
             </div>
-          </div>
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>2nd Grade Supply List</h2>
-              <h2>Click Here</h2>
+          </a>
+          <a href="#" title="4th Grade Supply List" alt="4th Grade Supply List">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>4th Grade Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="large-12 columns">
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>3rd Grade Supply List</h2>
-              <h2>Click Here</h2>
+          </a>
+          <a href="#" title="5th Grade Supply List" alt="5th Grade Supply List">
+            <div class="wrapper large-4 small-12 columns">
+              <div class="icons"><img src="img/clipboardIcon.png"></div>
+              <div>
+                <h2>5th Grade Supply List</h2>
+                <h2>Click Here</h2>
+              </div>
             </div>
-          </div>
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>4th Grade Supply List</h2>
-              <h2>Click Here</h2>
-            </div>
-          </div>
-          <div class="wrapper large-4 small-12 columns">
-            <div class="icons"><img src="img/clipboardIcon.png" alt=""></div>
-            <div>
-              <h2>5th Grade Supply List</h2>
-              <h2>Click Here</h2>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
@@ -376,10 +388,10 @@
               </div>
             </div>
             <div class="large-12 small-12 columns">
-              <h2>TRANSCRIPTS</h2>
-              <h2>UNIFORM POLICY/DRESS CODE</h2>
-              <h2>LUNCH MENU</h2>
-              <h2>KHAN ACADEMY</h2>
+              <a href="#"><h2>TRANSCRIPTS</h2></a>
+              <a href="#"><h2>UNIFORM POLICY/DRESS CODE</h2></a>
+              <a href="#"><h2>LUNCH MENU</h2></a>
+              <a href="#"><h2>KHAN ACADEMY</h2></a>
             </div>
           </div>
 
@@ -387,7 +399,7 @@
         <!-- EVENTS -->
         <div id="article2" class="large-6 small-12 columns">
           <div id="headContainer2" class="large-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Events Icon"></div>
+            <div class="icons large-3 columns"><img src="img/twitIcon.png" alt="Events Icon"></div>
             <h1 class="large-3 columns end">Twitter</h1>
             <div class="graphicEle large-12 columns">
               <img src="img/whiteGraphic.png" border="0">
