--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-    <div id="socialNumber">
-
-    </div>
     <!-- HEADER 1 -->
     <header id="header1">
         <!-- SOCIAL MEDIA AND PHONE NUMBER -->
         <div id="socialNumber">
-          <div class="phone">(901) 416-1700</div>
-          <div id="social" class="icons">
-            <img src="img/facebook_logo_detail.gif" alt="">
-            <img src="img/ios_homescreen_icon.jpg" alt="">
+          <div id="socialWrap">
+            <div class="phone">(901) 416-1700</div>
+            <div id="social" class="icons">
+              <img src="img/facebook_logo_detail.gif" alt="">
+              <img src="img/ios_homescreen_icon.jpg" alt="">
+            </div>
           </div>
         </div>
 
@@ -41,25 +40,24 @@
 
             <section class="top-bar-section">
             	<ul id="headMenu">
-              	<li class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
-              	<li class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#mission" target="_blank">News/Events</a></li>
-              	<li class="slideUnder" title="Supply List Cordova Elementary" alt="Supply List"><a href="#global" target="_blank">Supply List</a></li>
-              	<li class="slideUnder" title="Quick Links" alt="Quick Links"><a href="#quick-twit" target="_blank">Quick Links</a></li>
-              	<li class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="" target="_blank">Resources</a></li>
+              	<li id="linkHome" class="currentLink slideUnder" title="Cordova Elementary Home" alt="Home"><a href="#home">Home</a></li>
+              	<li id="linkNews" class="slideUnder" title="News/Events Cordova Elementary" alt="News/Events"><a href="#mission" target="_blank">Announcements/Calendar</a></li>
+                <li id="linkResources" class="slideUnder" title="Cordova Elementary Resources" alt="Resources"><a href="#global" target="_blank">Resources</a></li>
+              	<li class="slideUnder" title="Cordova Elementary Staff" alt="Staff"><a href="" target="_blank">Staff</a></li>
                 <li class="slideUnder" title="About Cordova Elementary" alt="About"><a href="" target="_blank">About</a></li>
-             		<li class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#contact">Contact</a></li>
+             		<li id="linkContact" class="slideUnder" title="Contact Cordova Elementary" alt="Contact"><a href="#contact">Contact</a></li>
                 <li><img src="img/scs-log-small.png" title="Shelby County Schools" alt="Shelby County Schools"></li>
               </ul>
             </section>
           </nav>
       </header>
 
-      <!-- HEADER 2 -->
-      <header id="header2" class="headChange">
-        <!-- LOGO 2 -->
+
+      <!-- <header id="header2" class="headChange">
+
         <div class="logos large-3 medium-3 small-3 columns"><a href="index.html"><img src="img/logo.png" title="Cordova Elementary School" alt="Cordova Elementary School" border="0"></a></div>
 
-          <!-- NAVIGATION 2 -->
+
           <nav class="top-bar large-9 small-9 columns" data-topbar>
           	<ul class="title-area">
               <li class="name"></li>
@@ -79,7 +77,7 @@
               </ul>
             </section>
           </nav>
-      </header>
+      </header> -->
 
 
 
@@ -93,11 +91,11 @@
                   <div class="intro">
                     <h1>Cordova Elementary</h1>
                     <div class="graphicEle large-12 columns">
-                      <img src="img/whiteGraphic.png" border="0">
+                      <img src="img/graphicRed.png" border="0">
                     </div>
                     <h2>Home of the cougar cubs</h2>
 
-                    <div id="buttonsWrap" class="large-12 large-centered small-12 columns">
+                    <!-- <div id="buttonsWrap" class="large-12 large-centered small-12 columns">
                       <div class="buttons large-3 small-12 columns end" title="Cordova Elementary Staff" alt="Cordova Elementary Staff">
                         <img src="img/clickIcon.png">
                         <div>
@@ -119,7 +117,7 @@
                           <h2>click here</h2>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
                   </div>
                 </div>
@@ -137,7 +135,7 @@
     <!-- DOWN ARROW -->
     <div id="downArr" title="Cordova Elementary Mission/News/Events">
       <a href="#mission">
-        <p>News/Events</p>
+        <p>Announcements/Calendar</p>
         <img src="img/downArr.png" border="0">
       </a>
     </div>
@@ -146,11 +144,25 @@
 
   <!-- MISSION STATEMENT -->
     <section id="mission">
-      <h1>Our Mission</h1>
-      <div class="graphic">
-        <img src="img/graphic.png" border="0">
+      <div class="large-6 large-centered small-12 columns">
+        <div class="icons large-3 columns"><img src="img/linkIcon.png" alt="Link Icon"></div>
+        <h1 class="large-6 columns">Quick Links</h1>
+        <div class="graphicEle large-12 columns">
+          <img src="img/graphic.png" border="0">
+        </div>
       </div>
-      <p>The mission of Cordova Elementary School is to provide a safe and challenging environment that is committed to helping all of our students successfully achieve their maximum potential.</p>
+      <div class="large-6 large-centered small-12 columns">
+        <div class="large-3 small-12 columns">
+          <a href="#"><h2>TRANSCRIPTS</h2></a>
+          <a href="#"><h2>UNIFORM/DRESS CODE</h2></a>
+          <a href="#"><h2>LUNCH MENU</h2></a>
+        </div>
+        <div class="large-3 small-12 columns">
+          <a href="#"><h2>GRADE SCALE</h2></a>
+          <a href="#"><h2>PARENT_CONNECT</h2></a>
+          <a href="#"><h2>SUPPLY LIST</h2></a>
+        </div>
+      </div>
     </section>
 
 
@@ -163,8 +175,8 @@
           <!-- NEWS -->
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
-              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="News Icon"></div>
-              <h1 class="large-3 columns end">News</h1>
+              <div class="icons large-3 columns"><img src="img/newIcon.png" alt="Announcements Icon"></div>
+              <h1 class="large-3 columns end">Announcements</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphic.png" border="0">
               </div>
@@ -233,8 +245,8 @@
         <!-- EVENTS -->
         <div id="article2" class="large-6 small-12 columns">
           <div id="headContainer2" class="large-6 large-centered small-12 columns">
-            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Events Icon"></div>
-            <h1 class="large-3 columns end">Events</h1>
+            <div class="icons large-3 columns"><img src="img/calendarIcon.png" alt="Calendar Icon"></div>
+            <h1 class="large-3 columns end">Calendar</h1>
             <div class="graphicEle large-12 columns">
               <img src="img/whiteGraphic.png" border="0">
             </div>
@@ -335,7 +347,7 @@
 
 
     <!-- SUPPLY LIST -->
-    <section id="supply">
+    <!-- <section id="supply">
       <div class="large-12 columns">
         <div class="large-12 columns">
           <a href="#" title="Kindergarten/Pre-K Supply List" alt="Kindergarten/Pre-K Supply List">
@@ -396,13 +408,13 @@
             </a>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- END SUPPLY LIST -->
 
 
 
-    <!-- QUICK LINKS/TWITTER -->
-    <section id="quick-twit">
+    <!-- RESOURCES/TWITTER -->
+    <section id="resource-twit">
       <div class="row">
         <div class="large-12 small-12 columns">
 
@@ -410,7 +422,7 @@
           <div id="article1" class="large-6 small-12 columns">
             <div id="headContainer" class="large-6 large-centered small-12 columns">
               <div class="icons large-3 columns"><img src="img/linkIcon.png" alt="News Icon"></div>
-              <h1 class="large-3 columns end">Quick Links</h1>
+              <h1 class="large-3 columns end">Resources</h1>
               <div class="graphicEle large-12 columns">
                 <img src="img/graphic.png" border="0">
               </div>
